k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vgtechm
  labels:
    app.kubernetes.io/name: vgtechm
    app.kubernetes.io/env: production
