k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vgtechm-backend-landing
  namespace: vgtechm
  labels:
    app: vgtechm-backend-landing
spec:
  type: ClusterIP
  selector:
    app: vgtechm-backend-landing
  ports:
    - port: 80
      targetPort: 4005
      protocol: TCP
      name: http
