k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vgtechm-backend-landing
  namespace: vgtechm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.vgtechm.com
      secretName: vgtechm-backend-landing-tls
  rules:
    - host: api.vgtechm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vgtechm-backend-landing
                port:
                  number: 80
